<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.runing_city.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>
<!--    <fragment-->
<!--        android:id="@+id/nav_home_second"-->
<!--        android:name="com.example.runing_city.ui.home.HomeSecondFragment"-->
<!--        android:label="@string/home_second"-->
<!--        tools:layout="@layout/fragment_home_second">-->
<!--        <action-->
<!--            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"-->
<!--            app:destination="@id/nav_home" />-->

<!--        <argument-->
<!--            android:name="myArg"-->
<!--            app:argType="string" />-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.runing_city.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_nav_map_to_nav_slideshow"
            app:destination="@id/nav_onepoint" />
    </fragment>

    <fragment
        android:id="@+id/nav_onepoint"
        android:name="com.example.runing_city.ui.mapPoint.OnePointFragment"
        android:label="@string/menu_onepoint"
        tools:layout="@layout/fragment_onepoint" >
        <argument
            android:name="pointId"
            app:argType="integer"
            android:defaultValue="0" />
    </fragment>
</navigation>